--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     crossorigin="anonymous"
   />
     <!--
+      <link href="//vjs.zencdn.net/5.4.6/video-js.min.css" rel="stylesheet">
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
