--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link href="//vjs.zencdn.net/5.4.6/video-js.min.css" rel="stylesheet">
+     <link href="https://vjs.zencdn.net/7.11.4/video-js.css" rel="stylesheet"/>
+     <script src="https://vjs.zencdn.net/7.11.4/video.min.js"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
